--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1"
+    "@actions/exec": "^1.1.1",
+    "simple-git": "^3.25.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1"
